fixed text alignment in footer
added nowrap to phone para

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -399,6 +399,7 @@
             .phone-para {
                 position: relative;
                 top: u.rem(-4);
+                white-space: nowrap;
 
                 @include u.breakpoint(medium) {
                     font-size: small;
